make.log
Allwmake /home/openfoam/applications/solvers/pamFoam
g++ -std=c++11 -m64 -Dlinux64 -DWM_ARCH_OPTION=64 -DWM_DP -DWM_LABEL_SIZE=32 -Wall -Wextra -Wold-style-cast -Wnon-virtual-dtor -Wno-unused-parameter -Wno-invalid-offsetof -O3  -DNoRepository -ftemplate-depth-100 -I./processModels -I/opt/openfoam5/applications/solvers/multiphase/multiphaseEulerFoam -I/opt/openfoam5/applications/solvers/multiphase/multiphaseEulerFoam/multiphaseSystem/lnInclude -I/opt/openfoam5/applications/solvers/multiphase/multuphaseEulerFoam/multiphaseFixedFluxPressure -I/opt/openfoam5/applications/solvers/multiphase/multiphaseEulerFoam/interfacialModels/lnInclude -I/opt/openfoam5/src/transportModels -I/opt/openfoam5/src/transportModels/incompressible/lnInclude -I/opt/openfoam5/src/transportModels/interfaceProperties/lnInclude -I/opt/openfoam5/src/transportModels/incompressible/singlePhaseTransportModel -I/opt/openfoam5/src/TurbulenceModels/turbulenceModels/lnInclude -I/opt/openfoam5/src/TurbulenceModels/incompressible/lnInclude -I/opt/openfoam5/src/turbulenceModels/LES/LESdeltas/lnInclude -I/opt/openfoam5/src/finiteVolume/lnInclude -I/opt/openfoam5/src/meshTools/lnInclude -I/home/openfoam/src/photoBio/lnInclude -IlnInclude -I. -I/opt/openfoam5/src/OpenFOAM/lnInclude -I/opt/openfoam5/src/OSspecific/POSIX/lnInclude   -fPIC -c pamFoam.C -o Make/linux64GccDPInt32Opt/pamFoam.o
In file included from pamFoam.C:105:0:
solveRadiativeField.H: In function 'int main(int, char**)':
solveRadiativeField.H:20:5: error: 'photoBioModel' was not declared in this scope
     photoBioModel->correct();
     ^
solveRadiativeField.H:20:5: note: suggested alternative:
In file included from pamFoam.C:47:0:
/home/openfoam/src/photoBio/lnInclude/photoBioModel.H:67:7: note:   'Foam::photoBio::photoBioModel'
 class photoBioModel
       ^
/opt/openfoam5/wmake/rules/General/transform:25: recipe for target 'Make/linux64GccDPInt32Opt/pamFoam.o' failed
make: *** [Make/linux64GccDPInt32Opt/pamFoam.o] Error 1
